--- a/static/requin_sitebase.css
+++ b/static/requin_sitebase.css
@@ -363,6 +363,17 @@ body::before {
   z-index: -1;
 }
 
+#tableContainer{
+  max-height: 300px;
+  overflow-y: auto;
+  border: 15px;
+  scrollbar-color: red orange;
+}
+
+.postable{
+  margin-top: 0%;
+}
+
 @media (max-width: 768px) {
   header h1 {
     font-size: 1.5rem;
