--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -180,7 +181,7 @@
         input: 'select',
         inputOptions: {
           'temp': 'Température',
-          'pressure': 'Pression',
+          'humidity': 'Humidité',
           'flow': 'Débit'
         },
         inputPlaceholder: 'Sélectionnez une mesure...',
